--- a/front-end/src/styles/NotificationBar.module.css
+++ b/front-end/src/styles/NotificationBar.module.css
@@ -4,7 +4,7 @@
 }
 
 .notificationCardItem {
-  border-top: #eee 1px solid;
+  border-top: var(--gray) 1px solid;
   padding: 0.5rem 0;
   margin: 0 auto;
   cursor: pointer;
@@ -16,7 +16,7 @@
 }
 
 .notificationCardItem:hover {
-  background-color: #e9ecef;
+  background-color: var(--gray);
 }
 
 .notificationBarContainer {
@@ -25,7 +25,7 @@
 
 .notificationListContainer {
   width: fit-content;
-  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: var(--boxShadow);
   position: relative;
   top: 1.5rem;
   right: 19rem;
