--- a/front-end/src/styles/SidebarElement.module.css
+++ b/front-end/src/styles/SidebarElement.module.css
@@ -2,20 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #a4a7aa;
+  color: var(--darkGray);
   padding: 0.5rem 0;
   position: relative;
 }
 
 .container:hover {
-  color: #fff;
-  background-color: #4e487c;
+  color: var(--white);
+  background-color: var(--darkBlueSelected);
   cursor: pointer;
 }
 
 .currentPage {
-  color: #fff;
-  background-color: #4e487c;
+  color: var(--white);
+  background-color: var(--darkBlueSelected);
 }
 
 .currentPage::after {
@@ -25,7 +25,7 @@
   width: 2rem;
   height: 2rem;
   position: absolute;
-  background-color: #fff;
+  background-color: var(--white);
   top: 50%;
   right: -1rem;
   margin-top: -1rem;
